<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="adjust_degree">Adjust serving height</string>
    <string name="adjustnote">Choose point to adjust:</string>
    <string name="advanced">Advanced</string>
    <string name="aicoach">AI Coach</string>
    <string name="aigenerating">AI drill is being generated...</string>
    <string name="alert">Alert</string>
    <string name="already_dele">Delete successfully.</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">PusunTennis</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="back_spin">Back spin</string>
    <string name="back_to">Please select one back court point.</string>
    <string name="bajada">Bajada</string>
    <string name="bandeja">Bandeja</string>
    <string name="beginner">Beginner</string>
    <string name="blue_is_open">Bluetooth is open</string>
    <string name="blue_need_setting">Request location permission to use</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="cancel">Cancel</string>
    <string name="change_paddle">Paddle Tennis</string>
    <string name="change_point">Changing points...</string>
    <string name="change_tennis">Standard Tennis</string>
    <string name="changing">Changing...</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="check_connect">Device is not connected, Please click the top button to connect</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="connect_failure_check">Connect failure.Please check and retry</string>
    <string name="connected">Connected</string>
    <string name="connecting_device">Connecting device...</string>
    <string name="create_drill">Create Drill</string>
    <string name="cross">Cross</string>
    <string name="cross1">Left deep &amp; middle light</string>
    <string name="cross2">Right deep &amp; middle light</string>
    <string name="cross3">Left light &amp; middle deep</string>
    <string name="cross4">Middle deep &amp; right light</string>
    <string name="cross5">Left deep &amp; right light</string>
    <string name="cross6">Left light &amp; right deep</string>
    <string name="dele">Delete</string>
    <string name="dele_routes">Delete</string>
    <string name="device_is_disconnect">Device is disconnected</string>
    <string name="dink">Dink</string>
    <string name="dir">DIR</string>
    <string name="disconnected">Disconnected</string>
    <string name="drill">AI Drill</string>
    <string name="drill_note">Drill</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exo_controls_cc_disabled_description">Enable subtitles</string>
    <string name="exo_controls_cc_enabled_description">Disable subtitles</string>
    <string name="exo_controls_custom_playback_speed">%1$.2fx</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="exo_controls_fullscreen_enter_description">Enter fullscreen</string>
    <string name="exo_controls_fullscreen_exit_description">Exit fullscreen</string>
    <string name="exo_controls_hide">Hide player controls</string>
    <string name="exo_controls_next_description">Next</string>
    <string name="exo_controls_overflow_hide_description">Hide additional settings</string>
    <string name="exo_controls_overflow_show_description">Show additional settings</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_playback_speed">Speed</string>
    <string name="exo_controls_previous_description">Previous</string>
    <string name="exo_controls_repeat_all_description">Current mode: Repeat all. Toggle repeat mode.</string>
    <string name="exo_controls_repeat_off_description">Current mode: Repeat none. Toggle repeat mode.</string>
    <string name="exo_controls_repeat_one_description">Current mode: Repeat one. Toggle repeat mode.</string>
    <string name="exo_controls_rewind_description">Rewind</string>
    <string name="exo_controls_seek_bar_description">Playback progress</string>
    <string name="exo_controls_settings_description">Settings</string>
    <string name="exo_controls_show">Show player controls</string>
    <string name="exo_controls_shuffle_off_description">Enable shuffle mode</string>
    <string name="exo_controls_shuffle_on_description">Disable shuffle mode</string>
    <string name="exo_controls_stop_description">Stop</string>
    <string name="exo_controls_time_placeholder">00:00:00</string>
    <string name="exo_controls_vr_description">VR mode</string>
    <string name="exo_download_completed">Download completed</string>
    <string name="exo_download_description">Download</string>
    <string name="exo_download_downloading">Downloading</string>
    <string name="exo_download_failed">Download failed</string>
    <string name="exo_download_notification_channel_name">Downloads</string>
    <string name="exo_download_paused">Downloads paused</string>
    <string name="exo_download_paused_for_network">Downloads waiting for network</string>
    <string name="exo_download_paused_for_wifi">Downloads waiting for WiFi</string>
    <string name="exo_download_removing">Removing downloads</string>
    <string name="exo_item_list">%1$s, %2$s</string>
    <string name="exo_track_bitrate">%1$.2f Mbps</string>
    <string name="exo_track_mono">Mono</string>
    <string name="exo_track_resolution">%1$d × %2$d</string>
    <string name="exo_track_role_alternate">Alternate</string>
    <string name="exo_track_role_closed_captions">CC</string>
    <string name="exo_track_role_commentary">Commentary</string>
    <string name="exo_track_role_supplementary">Supplementary</string>
    <string name="exo_track_selection_auto">Auto</string>
    <string name="exo_track_selection_none">None</string>
    <string name="exo_track_selection_title_audio">Audio</string>
    <string name="exo_track_selection_title_text">Text</string>
    <string name="exo_track_selection_title_video">Video</string>
    <string name="exo_track_stereo">Stereo</string>
    <string name="exo_track_surround">Surround sound</string>
    <string name="exo_track_surround_5_point_1">5.1 surround sound</string>
    <string name="exo_track_surround_7_point_1">7.1 surround sound</string>
    <string name="exo_track_unknown">Unknown</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fix_p1">Fixed point 1</string>
    <string name="fix_p2">Fixed point 2</string>
    <string name="fix_p3">Fixed point 3</string>
    <string name="fixed">Fixed</string>
    <string name="fixedpm">Fixed</string>
    <string name="fixedpr">Fixed</string>
    <string name="forbid_alert">The device has been disabled. Please contact customer service to unlock it.</string>
    <string name="freq">Freq</string>
    <string name="gate_alert">Protection status for balls at entrance, please shut the device and handle it, then restart the device.</string>
    <string name="go_setting">Setting</string>
    <string name="handed">Handedness</string>
    <string name="hangle">H angle</string>
    <string name="hangles">H angle</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="horizontal">Horizontal</string>
    <string name="horizontal_middle_line">Middle line</string>
    <string name="horizontal_narrow_line">Narrow line</string>
    <string name="horizontal_random">Horizontal random</string>
    <string name="horizontal_three_line">Three line</string>
    <string name="horizontal_two_line">Middle line</string>
    <string name="horizontal_wide_line">Wide line</string>
    <string name="horizontalpr">Horizontal</string>
    <string name="houchang">Backcourt</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="initializing">Connected,initializing...</string>
    <string name="input">input</string>
    <string name="input_keyboard">Points input keyboard</string>
    <string name="input_route_name">Please input the name to be saved.</string>
    <string name="intermediate">Intermediate</string>
    <string name="interval">Interval(s)</string>
    <string name="intervals">Interval(s)</string>
    <string name="left">Left</string>
    <string name="level">Level</string>
    <string name="no_device_found">No device is found.Please check device.</string>
    <string name="number_balls">Number of balls</string>
    <string name="path_name">Custom route name</string>
    <string name="pause">Pause at end of drill</string>
    <string name="pause_long">Long pause</string>
    <string name="pause_no">No pause</string>
    <string name="pause_short">Short pause</string>
    <string name="program">Program</string>
    <string name="pusun_tennis_device">Pusun Tennis Devices</string>
    <string name="right">Right</string>
    <string name="scan">scan</string>
    <string name="step_one">STEP1:Release the adjustment knob;</string>
    <string name="step_three">STEP3:If need,open the bottom lift bracket of the machine to obtain a higher serve angle.</string>
    <string name="step_two">STEP2:Adjust the ball track to the appropriate angle before tightening the adjustment knob.</string>
    <string name="submit">Confirm</string>
</resources>