<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:orientation="horizontal"
        android:id="@+id/re_back"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/backmain"
            android:scaleType="centerInside"
            android:layout_centerVertical="true"/>
        <TextView
            android:textSize="23sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="40dp"
            android:text="@string/drill"
            android:layout_toRightOf="@+id/back_btn"/>
    </RelativeLayout>
    <TextView
        android:textSize="15sp"
        android:textColor="@color/black"
        android:gravity="center_vertical"
        android:id="@+id/hand"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="10dp"
        android:text="@string/handed"/>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/handedness"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="10dp"
        android:weightSum="3"
        android:layout_below="@+id/re_back">
        <Button
            android:textSize="15sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/left"
            android:background="@drawable/code_button_bg_default"
            android:visibility="visible"
            android:layout_width="150dp"
            android:layout_height="36dp"
            android:text="@string/left"
            android:layout_weight="1"/>
        <Button
            android:textSize="15sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:id="@+id/right"
            android:background="@drawable/button_dark_selector"
            android:layout_width="150dp"
            android:layout_height="36dp"
            android:layout_marginLeft="5dp"
            android:text="@string/right"
            android:layout_weight="1"/>
        <Button
            android:textSize="15sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/selection"
            android:background="@drawable/code_button_bg_default"
            android:visibility="invisible"
            android:layout_width="150dp"
            android:layout_height="36dp"
            android:layout_marginLeft="5dp"
            android:text="@string/program"
            android:layout_weight="1"/>
    </LinearLayout>
    <TextView
        android:textSize="15sp"
        android:textColor="@color/black"
        android:gravity="center_vertical"
        android:id="@+id/level_tv"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:text="@string/level"
        android:layout_below="@+id/handedness"/>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/level"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="10dp"
        android:weightSum="3"
        android:layout_below="@+id/handedness">
        <Button
            android:textSize="15sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/low"
            android:background="@drawable/code_button_bg_default"
            android:visibility="visible"
            android:layout_width="150dp"
            android:layout_height="36dp"
            android:text="@string/beginner"
            android:layout_weight="1"/>
        <Button
            android:textSize="15sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:id="@+id/mid"
            android:background="@drawable/button_dark_selector"
            android:layout_width="150dp"
            android:layout_height="36dp"
            android:layout_marginLeft="5dp"
            android:text="@string/intermediate"
            android:layout_weight="1"/>
        <Button
            android:textSize="15sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/high"
            android:background="@drawable/code_button_bg_default"
            android:visibility="visible"
            android:layout_width="150dp"
            android:layout_height="36dp"
            android:layout_marginLeft="5dp"
            android:text="@string/advanced"
            android:layout_weight="1"/>
    </LinearLayout>
    <TextView
        android:textSize="15sp"
        android:textColor="@color/black"
        android:gravity="center_vertical"
        android:id="@+id/pause_tv"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:text="@string/pause"
        android:layout_below="@+id/level"/>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/pause"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="10dp"
        android:weightSum="3"
        android:layout_below="@+id/level">
        <Button
            android:textSize="15sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:id="@+id/no_pause"
            android:background="@drawable/button_dark_selector"
            android:visibility="visible"
            android:layout_width="150dp"
            android:layout_height="36dp"
            android:text="@string/pause_no"
            android:layout_weight="1"/>
        <Button
            android:textSize="15sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/short_pause"
            android:background="@drawable/code_button_bg_default"
            android:layout_width="150dp"
            android:layout_height="36dp"
            android:layout_marginLeft="5dp"
            android:text="@string/pause_short"
            android:layout_weight="1"/>
        <Button
            android:textSize="15sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/long_pause"
            android:background="@drawable/code_button_bg_default"
            android:visibility="visible"
            android:layout_width="150dp"
            android:layout_height="36dp"
            android:layout_marginLeft="5dp"
            android:text="@string/pause_long"
            android:layout_weight="1"/>
    </LinearLayout>
    <TextView
        android:textSize="15sp"
        android:textColor="@color/black"
        android:gravity="center_vertical"
        android:id="@+id/number_tv"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="10dp"
        android:text="@string/number_balls"
        android:layout_below="@+id/pause"/>
    <RelativeLayout
        android:id="@+id/num"
        android:background="@drawable/button_dark_selector"
        android:layout_width="120dp"
        android:layout_height="36dp"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/pause"
        android:layout_centerHorizontal="true">
        <TextView
            android:textSize="29sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/numde"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="-"/>
        <TextView
            android:textSize="25sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/numadd"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="80dp"
            android:text="+"/>
        <TextView
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:id="@+id/numtv"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:text="3"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    <Button
        android:textSize="15sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:id="@+id/create_drill"
        android:background="@drawable/button_dark_selector"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:text="@string/create_drill"
        android:layout_below="@+id/num"
        android:layout_centerInParent="true"/>
</RelativeLayout>
