<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textSize="18sp"
        android:textColor="#666"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingTop="15dp"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/path_name"/>
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="left"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/input"/>
        <EditText
            android:textColor="@color/black"
            android:id="@+id/input"
            android:background="@drawable/gray_square_bg_default"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
    <View
        android:background="#e6e6e6"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/negative"
            android:background="#ffffff"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:stateListAnimator="@null"/>
        <View
            android:background="#e6e6e6"
            android:layout_width="1dp"
            android:layout_height="match_parent"/>
        <Button
            android:textColor="#2196f3"
            android:id="@+id/positive"
            android:background="#ffffff"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_weight="1"
            android:stateListAnimator="@null"/>
    </LinearLayout>
</LinearLayout>
