<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/code_button_bg_white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginTop="15dp"
    android:layout_marginRight="5dp"
    android:layout_marginBottom="15dp">
    <TextView
        android:textSize="19sp"
        android:textColor="@color/white"
        android:gravity="left"
        android:background="@drawable/code_button_top_default"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adjust_degree"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="66dp">
        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="300dp"
                android:layout_height="280dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="1dp"
                android:src="@drawable/t2"
                android:scaleType="centerInside"/>
            <TextView
                android:textSize="16sp"
                android:textColor="@color/black"
                android:id="@+id/step1"
                android:background="@color/white"
                android:paddingLeft="10dp"
                android:paddingTop="2dp"
                android:paddingRight="10dp"
                android:paddingBottom="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="10dp"
                android:text="@string/step_one"/>
            <TextView
                android:textSize="16sp"
                android:textColor="@color/black"
                android:id="@+id/step2"
                android:background="@color/white"
                android:paddingLeft="10dp"
                android:paddingTop="2dp"
                android:paddingRight="10dp"
                android:paddingBottom="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="10dp"
                android:text="@string/step_two"/>
            <View
                android:background="#e6e6e6"
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <TextView
                android:textSize="16sp"
                android:textColor="@color/black"
                android:id="@+id/step3"
                android:background="@color/white"
                android:paddingLeft="10dp"
                android:paddingTop="2dp"
                android:paddingRight="10dp"
                android:paddingBottom="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="10dp"
                android:text="@string/step_three"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/t6"
                android:scaleType="centerInside"/>
        </LinearLayout>
    </ScrollView>
    <Button
        android:textSize="16sp"
        android:textColor="@color/white"
        android:id="@+id/conf"
        android:background="@drawable/code_button_bg_default"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginBottom="15dp"
        android:text="@string/submit"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
