<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp">
    <TextView
        android:textSize="20dp"
        android:textColor="@color/black"
        android:gravity="center_vertical"
        android:id="@+id/signal_note"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="6dp"
        android:text="@string/pusun_tennis_device"/>
    <TextView
        android:textSize="13dp"
        android:textColor="@color/icon_gray"
        android:gravity="center_vertical"
        android:id="@+id/version_note"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="6dp"
        android:text="V1.3.5"
        android:layout_alignParentRight="true"/>
    <RelativeLayout
        android:id="@+id/power_lay"
        android:visibility="gone"
        android:layout_width="16dp"
        android:layout_height="32dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_alignParentRight="true">
        <ImageView
            android:layout_width="16dp"
            android:layout_height="32dp"
            android:src="@drawable/bat1"
            android:scaleType="fitXY"/>
        <ImageView
            android:id="@+id/power_no"
            android:visibility="gone"
            android:layout_width="16dp"
            android:layout_height="32dp"
            android:src="@drawable/bat0"
            android:scaleType="fitXY"/>
        <ImageView
            android:id="@+id/power4"
            android:layout_width="11dp"
            android:layout_height="5dp"
            android:layout_marginTop="6dp"
            android:src="@drawable/bat2"
            android:scaleType="fitXY"
            android:layout_centerHorizontal="true"/>
        <ImageView
            android:id="@+id/power3"
            android:layout_width="11dp"
            android:layout_height="5dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/bat2"
            android:scaleType="fitXY"
            android:layout_centerHorizontal="true"/>
        <ImageView
            android:id="@+id/power2"
            android:layout_width="6dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:src="@drawable/bat2"
            android:scaleType="fitXY"
            android:layout_centerHorizontal="true"/>
        <ImageView
            android:id="@+id/power1"
            android:layout_width="11dp"
            android:layout_height="5dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/bat2"
            android:scaleType="fitXY"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    <TextView
        android:textSize="16sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:id="@+id/scan"
        android:background="@drawable/selector_radiobtn"
        android:layout_width="90dp"
        android:layout_height="33dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="15dp"
        android:text="@string/scan"
        android:layout_alignParentRight="true"/>
    <TextView
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="50dp"/>
    <RelativeLayout
        android:id="@+id/no_scan"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_centerInParent="true">
        <ImageView
            android:gravity="center"
            android:id="@+id/image"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="14dp"
            android:src="@drawable/bicon_gray"
            android:scaleType="fitXY"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_device_found"
            android:layout_below="@+id/image"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_dev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/signal_note"/>
</RelativeLayout>
